--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^4.1.1",
     "cookie": "^0.4.1",
     "google-map-react": "^2.1.8",
     "react": "^16.14.0",
