--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "small-business",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.18.0"
+  },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -11,6 +14,7 @@
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.1",
     "cookie": "^0.4.1",
+    "express": "^4.17.1",
     "google-map-react": "^2.1.8",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
