--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node Server/server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
